Updated diary.html & oracle.html
Added additional images to project site for Diary and Oracle

--- a/diary.html
+++ b/diary.html
@@ -31,7 +31,9 @@
 <!--===== COLUMN ONE =====-->
 <!--ONE-->
 	<img class="projekti" src="links/projekti/diary-1.jpg">
+	<img class="projekti" src="links/projekti/diary-2.jpg">
 	<img class="projekti-mob" src="links/projekti/diarymob-1.jpg">
+	<img class="projekti-mob" src="links/projekti/diarymob-2.jpg">
 <!--===== COLUMN TWO =====-->
 <!--ONE-->
 </div>
