--- a/oracle.html
+++ b/oracle.html
@@ -31,7 +31,11 @@
 <!--===== COLUMN ONE =====-->
 <!--ONE-->
 	<img class="projekti" src="links/projekti/oracle-1.jpg">
+	<img class="projekti" src="links/projekti/oracle-2.jpg">
+	<img class="projekti" src="links/projekti/oracle-3.jpg">
 	<img class="projekti-mob" src="links/projekti/oraclemob-1.jpg">
+	<img class="projekti-mob" src="links/projekti/oraclemob-2.jpg">
+	<img class="projekti-mob" src="links/projekti/oraclemob-3.jpg">
 <!--===== COLUMN TWO =====-->
 <!--ONE-->
 </div>
