--- a/about.html
+++ b/about.html
@@ -75,10 +75,9 @@
 <footer class="footer-content, black">
 <div class="footer-social-icons">
     <ul class="social-icons">
-    	<li>tihana@letterformagic.com &nbsp;&nbsp;&nbsp;</li>
-        <li><a href="https://twitter.com/tihanasare" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://www.instagram.com/tsharka" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/tihanasare" target="_blank" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+    	<li><p>tihana@letterformagic.com</p>&nbsp;&nbsp;&nbsp;</li>
+        <li><a href="https://www.instagram.com/letterformagic" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/letterformagic" target="_blank" class="social-icon"> <i class="fa fa-facebook-square"></i></i></a></li>
     </ul>
 </div>
 </footer>
