Updated About with letterformagic links to socials

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 		<p>Letterforms & Magic studio is ran by graphic designer Tihana Šare.</p>
 		<p>Open for commissions at tihana@letterformagic.com</p>
 		<p>Based in Zagreb & London.</p>
-		<p><a href="https://twitter.com/tihanasare" target="blank" class="inline-link">Twitter</a> / <a href="https://www.instagram.com/tsharka/" target="blank" class="inline-link">Instagram</a> / <a href="https://www.linkedin.com/in/tihanasare/" target="blank" class="inline-link">LinkedIn</a></p>
+		<p><a href="https://www.instagram.com/letterformagic" target="blank" class="inline-link">Instagram</a> / <a href="https://www.facebook.com/letterformagic" target="blank" class="inline-link">Facebook</a></p>
 		</div>
 </div>
 
