pushing new works
Added BDSM project page, plus coming soon images for Coil and Das haus.

One major technical update is that display property is now set to GRID not COLUMN which means it reads the entries as rows not columns, useful for mobile view.

--- a/index.html
+++ b/index.html
@@ -27,43 +27,54 @@
 	</div>	
 
 <div class="grid3">
-<!--===== COLUMN ONE =====-->
+<!--===== ROW ONE =====-->
 <!--ONE-->
 	<div class="content flow">
 	  <div class="content flow">
-		<a href="ithell.html">
 			<div class="centered cursor"></div>
-			<img class="ithell" src="links/ithell-1.jpg">
-		</a>
+			<img class="coil" src="links/coil-soon.jpg">
 		</div>
 	</div> 
 <!--TWO-->
 	<div class="content flow">
-	<a href="solstice.html">
+	<a href="bdsm.html">
 		<div class="centered cursor"></div>
-		<img class="solstice" src="links/solstice2.jpg">
+		<img class="solstice" src="links/bdsm.jpg">
 	</a>
 	</div>
 <!--THREE-->
 	<div class="content flow">
-	<a href="oracle.html">
 		<div class="centered cursor"></div>
-		<img class="oracle" src="links/oracle1.jpg">
-	</a>
+		<img class="solstice" src="links/dashaus-soon.jpg">
 	</div>
-<!--FOUR-->
-	<div class="content flow">
-	<a href="sanatea.html">
-		<div class="centered cursor"></div>
-		<img class="sanatea" src="links/sanatea2.jpg">
-	</a>
-	</div>
-<!--===== COLUMN TWO =====-->
+<!--===== ROW TWO =====-->
 <!--ONE-->
-	<div class="content flow ">
+	<div class="content flow">
+	<a href="ithell.html">
+		<div class="centered cursor"></div>
+		<img class="ithell" src="links/ithell-1.jpg">
+	</a>
+	</div>
+<!--TWO-->
+	<div class="content flow">
 	<a href="inferno.html">
+		<div class="centered cursor"></div>
+		<img class="inferno" src="links/inferno1.jpg">
+	</a>
+	</div>
+<!--THREE-->
+	<div class="content flow ">
+	<a href="diary.html">
 	  <div class="centered cursor"></div>
-	  <img class="inferno" src="links/inferno1.jpg">
+	  <img class="diary" src="links/diary5.jpg">
+	</a>
+	</div>
+<!--===== ROW THREE =====-->
+<!--ONE-->
+	<div class="content flow">
+	<a href="solstice2.html">
+	  <div class="centered cursor"></div>
+	  <img class="solstice" src="links/solstice2.jpg">
 	</a>
 	</div>
 <!--TWO-->
@@ -75,31 +86,24 @@
 	</div>
 <!--THREE-->
 	<div class="content flow">
-	<a href="aleksandra.html">
+	<a href="gef.html">
 	  <div class="centered cursor"></div>
-	  <img class="aleksandra" src="links/aleksandra5.jpg">
+	  <img class="gef" src="links/gef1.jpg">
 	</a>
 	</div>
-<!--FOUR-->
-	<div class="content flow">
-	<a href="fairy.html">
-	  <div class="centered cursor"></div>
-	  <img class="fairy" src="links/fairy3.jpg">
-	</a>
-	</div>
-<!--===== COLUMN THREE =====-->
+<!--===== ROW FOUR =====-->
 <!--ONE-->
 	<div class="content flow">
-	<a href="diary.html">
+	<a href="oracle.html">
 	  <div class="centered cursor"></div>
-	  <img class="diary" src="links/diary5.jpg">
+	  <img class="oracle" src="links/oracle1.jpg">
 	</a>
 	</div>
 <!--TWO-->
 	<div class="content flow">
-	<a href="gef.html">
+	<a href="aleksandra.html">
 	  <div class="centered cursor"></div>
-	  <img class="gef" src="links/gef1.jpg">
+	  <img class="aleksandra" src="links/aleksandra5.jpg">
 	</a>
 	</div>
 <!--THREE-->
@@ -109,7 +113,22 @@
 	  <img class="gossamer" src="links/gossamer3.jpg">
 	</a>
 	</div>
-<!--FOUR-->
+<!--===== ROW FIVE =====-->
+<!--ONE-->
+	<div class="content flow">
+	<a href="sanatea.html">
+	  <div class="centered cursor"></div>
+	  <img class="sanatea" src="links/sanatea2.jpg">
+	</a>
+	</div>
+<!--TWO-->
+	<div class="content flow">
+	<a href="fairy.html">
+	  <div class="centered cursor"></div>
+	  <img class="fairy" src="links/fairy3.jpg">
+	</a>
+	</div>
+<!--THREE-->
 	<div class="content flow">
 	<a href="deathwatch.html">
 	  <div class="centered cursor"></div>
