Updated About section
Added Wooden Books and COIL Book Launch

--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
 <!--TWO-->
 		<div class="about-post">
 		<h4>News</h4>
+		<p><id class="space">CAMERA LIGHT OBLIVION/id> book launch this week in London's <a href="https://fontsinuse.com/uses/36810/ithell-colquhoun-genius-of-the-fern-loved-gul" class="inline-link" target="blank">Horse Hospital.</a></p>
 		<p><id class="space">ITHELL COLQUHOUN</id> book design is featured on <a href="https://fontsinuse.com/uses/36810/ithell-colquhoun-genius-of-the-fern-loved-gul" class="inline-link" target="blank">Fonts in Use.</a></p>
 		<p><id class="space">ON A DEATHWATCH</id> exhibit is selected for <a href="https://2017.pland.hr/izlozbe/medjunarodna-izlozba-mladih-autora/" target="blank" class="inline-link">Plan D International Design Festival.</a></p>
 		<p><id class="space">ON A DEATHWATCH</id> essay is published in <a href="https://cwadrca.bigcartel.com/product/meet-me-in-the-present-documents-and-their-afterlives" target="blank" class="inline-link"><i>Meet Me In The Present</i></a>, RCA, London.</p>
@@ -58,6 +59,7 @@
 		<p></p>
 		<h4>Clients</h4>
 		<p><id class="space">STRANGE ATTRACTOR</id>, Publisher, London</p>
+		<p><id class="space">WOODEN BOOKS</id>, Publisher, Glastonbury</p>
 		<p><id class="space">STATE51</id>, Music & Media, London</p>
 		<p><id class="space">LELO</id>, Global Sex Toy Brand, Zagreb</p>
 		<p><id class="space">DAS HAUS</id>, Architects, Zagreb</p>
