About quick update
link messed up

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 <!--TWO-->
 		<div class="about-post">
 		<h4>News</h4>
-		<p><id class="space">CAMERA LIGHT OBLIVION/id> book launch this week in London's <a href="https://fontsinuse.com/uses/36810/ithell-colquhoun-genius-of-the-fern-loved-gul" class="inline-link" target="blank">Horse Hospital.</a></p>
+		<p><id class="space">CAMERA LIGHT OBLIVION</id> book launch this week in London's <a href="https://www.thehorsehospital.com/events/coil-camera-light-oblivion" class="inline-link" target="blank">Horse Hospital.</a></p>
 		<p><id class="space">ITHELL COLQUHOUN</id> book design is featured on <a href="https://fontsinuse.com/uses/36810/ithell-colquhoun-genius-of-the-fern-loved-gul" class="inline-link" target="blank">Fonts in Use.</a></p>
 		<p><id class="space">ON A DEATHWATCH</id> exhibit is selected for <a href="https://2017.pland.hr/izlozbe/medjunarodna-izlozba-mladih-autora/" target="blank" class="inline-link">Plan D International Design Festival.</a></p>
 		<p><id class="space">ON A DEATHWATCH</id> essay is published in <a href="https://cwadrca.bigcartel.com/product/meet-me-in-the-present-documents-and-their-afterlives" target="blank" class="inline-link"><i>Meet Me In The Present</i></a>, RCA, London.</p>
