404 for solstice.html solved
edited wrong link

--- a/index.html
+++ b/index.html
@@ -31,21 +31,23 @@
 <!--ONE-->
 	<div class="content flow">
 	  <div class="content flow">
+	 	<a href="coil.html">
 			<div class="centered cursor"></div>
-			<img class="coil" src="links/coil-soon.jpg">
+			<img class="coil" src="links/coil.jpg">
+		</a>
 		</div>
 	</div> 
 <!--TWO-->
 	<div class="content flow">
 	<a href="bdsm.html">
 		<div class="centered cursor"></div>
-		<img class="solstice" src="links/bdsm.jpg">
+		<img class="bdsm" src="links/bdsm.jpg">
 	</a>
 	</div>
 <!--THREE-->
 	<div class="content flow">
 		<div class="centered cursor"></div>
-		<img class="solstice" src="links/dashaus-soon.jpg">
+		<img class="dashaus" src="links/dashaus-soon.jpg">
 	</div>
 <!--===== ROW TWO =====-->
 <!--ONE-->
@@ -72,7 +74,7 @@
 <!--===== ROW THREE =====-->
 <!--ONE-->
 	<div class="content flow">
-	<a href="solstice2.html">
+	<a href="solstice.html">
 	  <div class="centered cursor"></div>
 	  <img class="solstice" src="links/solstice2.jpg">
 	</a>
