Dodana infiltracija pod klijente
dodan croatia infiltration

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
 		<p><id class="space">STATE51</id>, Music & Media, London</p>
 		<p><id class="space">LELO</id>, Global Sex Toy Brand, Zagreb</p>
 		<p><id class="space">DAS HAUS</id>, Architects, Zagreb</p>
+		<p><id class="space">CROATIA INFILTRATION</id>, Urban Exploring & Filmmaking, Zagreb</p>
 		<p><id class="space">FEEDBACK</id>, Project Management, Zagreb</p>
 		<p></p>
 		<h4>Contact</h4> 
