DAS HAUS page added
new lading page added

--- a/dashaus.html
+++ b/dashaus.html
@@ -30,14 +30,15 @@
 <div class="grid1, white" >
 <!--===== COLUMN ONE =====-->
 <!--ONE-->
-	<img class="projekti" src="links/projekti/coil-1.jpg">
-	<img class="projekti" src="links/projekti/coil-2.jpg">
-	<img class="projekti" src="links/projekti/coil-3.jpg">
-	<img class="projekti" src="links/projekti/coil-4.jpg">
-	<img class="projekti-mob" src="links/projekti/coilmob-1.jpg">
-	<img class="projekti-mob" src="links/projekti/coilmob-2.jpg">
-	<img class="projekti-mob" src="links/projekti/coilmob-3.jpg">
-	<img class="projekti-mob" src="links/projekti/coilmob-4.jpg">
+	<img class="projekti" src="links/projekti/dashaus-1.jpg">
+	<img class="projekti" src="links/projekti/dashaus-2.jpg">
+	<img class="projekti" src="links/projekti/dashaus-3.jpg">
+	<img class="projekti" src="links/projekti/dashaus-4.jpg">
+	<img class="projekti-mob" src="links/projekti/dashausmob-1.jpg">
+	<img class="projekti-mob" src="links/projekti/dashausmob-2.jpg">
+	<img class="projekti-mob" src="links/projekti/dashausmob-3.jpg">
+	<img class="projekti-mob" src="links/projekti/dashausmob-4.jpg">
+
 <!--===== COLUMN TWO =====-->
 <!--ONE-->
 </div>
