--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 	</div>
 <!--THREE-->
 	<div class="content flow">
+	<a href="dashaus.html">
 		<div class="centered cursor"></div>
-		<img class="dashaus" src="links/dashaus-soon.jpg">
+		<img class="dashaus" src="links/dashaus.jpg">
+	</a>
 	</div>
 <!--===== ROW TWO =====-->
 <!--ONE-->
