--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--===== CODE BY LETTERFORMS AND MAGIC DESIGN STUDIO =====-->
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
 	<link rel="stylesheet" href="style.css">
 	<title>𝗟-𝗙+𝗠</title>
+	
 <!--web top icon for multiple devices-->
 	<link rel="apple-touch-icon" sizes="180x180" href="icons/chess_queen2.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="icons/chess_queen2.png">
@@ -27,6 +30,30 @@
 	</div>	
 
 <div class="grid3">
+<!--===== ROW ZERO =====-->
+<!--ONE-->
+	<div class="content flow">
+	  <div class="content flow">
+	 	<a href="nz.html">
+			<div class="centered cursor"></div>
+			<img class="mob-hidden" src="links/nz-1.jpg">
+		</a>
+		</div>
+	</div> 
+<!--TWO-->
+	<div class="content flow">
+	<a href="nz.html">
+		<div class="centered cursor"></div>
+		<img class="nz" src="links/nz-2.jpg">
+	</a>
+	</div>
+<!--THREE-->
+	<div class="content flow">
+	<a href="nz.html">
+		<div class="centered cursor"></div>
+		<img class="mob-hidden" src="links/nz-3.jpg">
+	</a>
+	</div>
 <!--===== ROW ONE =====-->
 <!--ONE-->
 	<div class="content flow">
