First Figma pages: Patternholic and PoppyFlower
Added to HomePage designs from Figma. Two new pages: PoppyFlower and Patternholic.

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
 	  <div class="content flow">
 	 	<a href="nz.html">
 			<div class="centered cursor"></div>
-			<img class="mob-hidden" src="links/nz-1.jpg">
+			<img class="nz" src="links/nz-2.jpg">
 		</a>
 		</div>
 	</div> 
 <!--TWO-->
 	<div class="content flow">
-	<a href="nz.html">
+	<a href="poppyflower.html">
 		<div class="centered cursor"></div>
-		<img class="nz" src="links/nz-2.jpg">
+		<img class="poppyflower" src="links/poppyflower.jpg">
 	</a>
 	</div>
 <!--THREE-->
 	<div class="content flow">
-	<a href="nz.html">
+	<a href="patternholic.html">
 		<div class="centered cursor"></div>
-		<img class="mob-hidden" src="links/nz-3.jpg">
+		<img class="patternholic" src="links/patternholic.jpg">
 	</a>
 	</div>
 <!--===== ROW ONE =====-->
