New line of projects
Adding Bone Music, Journal Five and Purgatory.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
 	</div>	
 
 <div class="grid3">
+<!--===== ROW -ONE =====-->
+<!--ONE-->
+	<div class="content flow">
+	  <div class="content flow">
+	 	<a href="bonemusic.html">
+			<div class="centered cursor"></div>
+			<img class="bonemusic" src="links/projects/bonemusic/bonemusic.jpg">
+		</a>
+		</div>
+	</div> 
+<!--TWO-->
+	<div class="content flow">
+	<a href="journalfive.html">
+		<div class="centered cursor"></div>
+		<img class="journalfive" src="links/projects/journalfive/journalfive.jpg">
+	</a>
+	</div>
+<!--THREE-->
+	<div class="content flow">
+	<a href="purgatory.html">
+		<div class="centered cursor"></div>
+		<img class="purgatory" src="links/projects/purgatory/purgatory.jpg">
+	</a>
+	</div>
 <!--===== ROW ZERO =====-->
 <!--ONE-->
 	<div class="content flow">
