new row of projects
Adding a new row of projects to online portfolio: walking flame, functions and coil ekd.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,31 @@
 	</div>	
 
 <div class="grid3">
-<!--===== ROW -ONE =====-->
+<!--===== ROW EIGHT =====-->
+<!--ONE-->
+	<div class="content flow">
+	  <div class="content flow">
+	 	<a href="walkingflame.html">
+			<div class="centered cursor"></div>
+			<img class="walkingflame" src="links/projects/walkingflame/walkingflame.jpg">
+		</a>
+		</div>
+	</div> 
+<!--TWO-->
+	<div class="content flow">
+	<a href="coil-ekd.html">
+		<div class="centered cursor"></div>
+		<img class="coil-ekd" src="links/projects/coil-ekd/coil-ekd.jpg">
+	</a>
+	</div>
+<!--THREE-->
+	<div class="content flow">
+	<a href="functions.html">
+		<div class="centered cursor"></div>
+		<img class="functions" src="links/projects/functions/functions.jpg">
+	</a>
+	</div>
+<!--===== ROW SEVEN =====-->
 <!--ONE-->
 	<div class="content flow">
 	  <div class="content flow">
@@ -54,7 +78,7 @@
 		<img class="purgatory" src="links/projects/purgatory/purgatory.jpg">
 	</a>
 	</div>
-<!--===== ROW ZERO =====-->
+<!--===== ROW SIX =====-->
 <!--ONE-->
 	<div class="content flow">
 	  <div class="content flow">
@@ -78,7 +102,7 @@
 		<img class="patternholic" src="links/projects/patternholic/patternholic.jpg">
 	</a>
 	</div>
-<!--===== ROW ONE =====-->
+<!--===== ROW FIVE =====-->
 <!--ONE-->
 	<div class="content flow">
 	  <div class="content flow">
@@ -102,7 +126,7 @@
 		<img class="dashaus" src="links/projects/dashaus/dashaus.jpg">
 	</a>
 	</div>
-<!--===== ROW TWO =====-->
+<!--===== ROW FOUR =====-->
 <!--ONE-->
 	<div class="content flow">
 	<a href="ithell.html">
@@ -146,7 +170,7 @@
 	  <img class="gef" src="links/projects/gef/gef1.jpg">
 	</a>
 	</div>
-<!--===== ROW FOUR =====-->
+<!--===== ROW TWO =====-->
 <!--ONE-->
 	<div class="content flow">
 	<a href="oracle.html">
@@ -168,7 +192,7 @@
 	  <img class="gossamer" src="links/projects/gossamer/gossamer3.jpg">
 	</a>
 	</div>
-<!--===== ROW FIVE =====-->
+<!--===== ROW ONE =====-->
 <!--ONE-->
 	<div class="content flow">
 	<a href="sanatea.html">
