updating .html without the new FB icon
Splitting the major push due to slow internet.

--- a/mfe.html
+++ b/mfe.html
@@ -14,7 +14,7 @@
 	<link rel="manifest" href="icons/site.webmanifest">
 </head>
 
-<body class="black">
+<body class="white">
 <article>
 <!--===== TOPBAR =====-->
 	<div class="topbar" id="topbar">
@@ -26,18 +26,21 @@
 		</div>
 	</div>	
 
-<div class="grid1">
+<div class="grid1, white" >
 <!--===== COLUMN ONE =====-->
 <!--ONE-->
-	<img class="projekti" src="links/projects/moh/moh-1.jpg">
-	<img class="projekti" src="links/projects/moh/moh-2.jpg">
-	<img class="projekti-mob" src="links/projects/moh/mohmob-1.jpg">
-	<img class="projekti-mob" src="links/projects/moh/mohmob-2.jpg">
+	<img class="projekti" src="links/projects/mfe/mfe1.jpg">
+	<img class="projekti" src="links/projects/mfe/mfe2.jpg">
+	<img class="projekti" src="links/projects/mfe/mfe3.jpg">
+	<img class="projekti-mob" src="links/projects/mfe/mfe-mob1.jpg">
+	<img class="projekti-mob" src="links/projects/mfe/mfe-mob2.jpg">
+	<img class="projekti-mob" src="links/projects/mfe/mfe-mob3.jpg">
+
 <!--===== COLUMN TWO =====-->
 <!--ONE-->
 </div>
 <!--===== FOOTER =====-->
-<footer class="footer-content">
+<footer class="footer-content, black">
 <div class="footer-social-icons">
     <ul class="social-icons">
     	<li><p>tihana@letterformagic.com</p>&nbsp;&nbsp;&nbsp;</li>
