--- a/decadent.html
+++ b/decadent.html
@@ -14,7 +14,7 @@
 	<link rel="manifest" href="icons/site.webmanifest">
 </head>
 
-<body class="black">
+<body class="white">
 <article>
 <!--===== TOPBAR =====-->
 	<div class="topbar" id="topbar">
@@ -26,18 +26,22 @@
 		</div>
 	</div>	
 
-<div class="grid1">
+<div class="grid1, white" >
 <!--===== COLUMN ONE =====-->
 <!--ONE-->
-	<img class="projekti" src="links/projects/moh/moh-1.jpg">
-	<img class="projekti" src="links/projects/moh/moh-2.jpg">
-	<img class="projekti-mob" src="links/projects/moh/mohmob-1.jpg">
-	<img class="projekti-mob" src="links/projects/moh/mohmob-2.jpg">
+	<img class="projekti" src="links/projects/decadent/decadent-1.jpg">
+	<img class="projekti" src="links/projects/decadent/decadent-2.jpg">
+	<img class="projekti" src="links/projects/decadent/decadent-3.jpg">
+	<img class="projekti" src="links/projects/decadent/decadent-4.jpg">
+	<img class="projekti-mob" src="links/projects/decadent/decadentmob-1.jpg">
+	<img class="projekti-mob" src="links/projects/decadent/decadentmob-2.jpg">
+	<img class="projekti-mob" src="links/projects/decadent/decadentmob-3.jpg">
+	<img class="projekti-mob" src="links/projects/decadent/decadentmob-4.jpg">
 <!--===== COLUMN TWO =====-->
 <!--ONE-->
 </div>
 <!--===== FOOTER =====-->
-<footer class="footer-content">
+<footer class="footer-content, black">
 <div class="footer-social-icons">
     <ul class="social-icons">
     	<li><p>tihana@letterformagic.com</p>&nbsp;&nbsp;&nbsp;</li>
