--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
 	</div>	
 
 <div class="grid3">
+<!--===== ROW NINE =====-->
+<!--ONE-->
+	<div class="content flow">
+	  <div class="content flow">
+	 	<a href="decadent.html">
+			<div class="centered cursor"></div>
+			<img class="decadent" src="links/projects/decadent/decadent.jpg">
+		</a>
+		</div>
+	</div> 
+<!--TWO-->
+	<div class="content flow">
+	<a href="trash.html">
+		<div class="centered cursor"></div>
+		<img class="trash" src="links/projects/trash/trash.jpg">
+	</a>
+	</div>
+<!--THREE-->
+	<div class="content flow">
+	<a href="mfe.html">
+		<div class="centered cursor"></div>
+		<img class="mfe" src="links/projects/mfe/mfe.jpg">
+	</a>
+	</div>
 <!--===== ROW EIGHT =====-->
 <!--ONE-->
 	<div class="content flow">
@@ -221,7 +245,6 @@
     <ul class="social-icons">
     	<li><p>tihana@letterformagic.com</p>&nbsp;&nbsp;&nbsp;</li>
         <li><a href="https://www.instagram.com/letterformagic" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://www.facebook.com/letterformagic" target="_blank" class="social-icon"> <i class="fa fa-facebook-square"></i></i></a></li>
     </ul>
 </div>
 </footer>
